# wk

./: .gitignore  Cargo.toml  Readme.md  compose.yml  mise.toml  wk  wk.kdl  workspace.wk
.hooks/: pre-commit
crates/client-local-ui/: Cargo.toml
crates/client-local-ui/src/: arrows.rs  client.rs  compositor.rs  host_shell.rs  lib.rs  render2d.rs
crates/wk-dockerfile/: Cargo.toml
crates/wk-dockerfile/src/: lib.rs
crates/wk-fabric/: Cargo.toml
crates/wk-fabric/src/: lib.rs  portfwd.rs  uplink.rs  veilid.rs
crates/wk-protocol/: Cargo.toml
crates/wk-protocol/src/: lib.rs  node_id.rs
crates/wk-server/: Cargo.toml
crates/wk-server/proptest-regressions/: server.txt  workspace.txt
crates/wk-server/src/: auth.rs  capture.rs  http.rs  images.rs  layers.rs  lib.rs  midi.rs  netstack.rs  oci.rs  options.rs  plugin.rs  portfwd.rs  runtime.rs  server.rs  sockets.rs  terminal.rs  tty.rs  uplink.rs  veilid.rs  vfs.rs  wiring.rs  workspace.rs
crates/wk-server/wit/: world.wit
crates/wk-server/wit-audio/: world.wit
crates/wk-server/wit-capture/: world.wit
crates/wk-server/wit-fs/: world.wit
crates/wk-server/wit-midi/: world.wit
crates/wk-server/wit-options/: world.wit
crates/wk-server/wit-sockets/: world.wit
crates/wk-server/wit-tty/: world.wit
crates/wk-token-service/: Cargo.toml
crates/wk-token-service/src/: lib.rs
crates/wk-vfs/: Cargo.toml
crates/wk-vfs/src/: layers.rs  lib.rs
example/: audio.wk  capture.wk  graphics.wk  live-coding.wk  network.wk  shader.wgsl  terminals.wk
examples/: cube.rs  custom-texture.rs  demo.rs  hello-world.rs  old.rs
plugins/arp/: Cargo.toml
plugins/arp/src/: lib.rs
plugins/arp/wit/: world.wit
plugins/beep/: Cargo.toml
plugins/beep/src/: lib.rs
plugins/beep/wit/: world.wit
plugins/echo6/: build.sh  echo.c
plugins/fetch/: build.sh  fetch.c
plugins/file-demo/: Cargo.toml
plugins/file-demo/src/: lib.rs
plugins/file-demo/wit/: world.wit
plugins/fs-demo/: Cargo.toml
plugins/fs-demo/src/: lib.rs
plugins/fs-demo/wit/: world.wit
plugins/hello/: Cargo.toml
plugins/hello/src/: bindings.rs  lib.rs
plugins/hello/wit/: world.wit
plugins/kilo/: build.sh
plugins/kilo/compat/: termios.h
plugins/lua/: build.sh
plugins/lua/compat/: compat.c
plugins/netserve/: build.sh  server.c
plugins/paint/: Cargo.toml
plugins/paint/src/: bindings.rs  lib.rs
plugins/paint/wit/: world.wit
plugins/piano/: Cargo.toml  mise.toml
plugins/piano/src/: lib.rs
plugins/piano/wit/: world.wit
plugins/recorder/: Cargo.toml
plugins/recorder/src/: lib.rs
plugins/recorder/wit/: world.wit
plugins/screenview/: Cargo.toml
plugins/screenview/src/: lib.rs
plugins/screenview/wit/: world.wit
plugins/shader/: Cargo.toml
plugins/shader/src/: lib.rs
plugins/shader/wit/: world.wit
plugins/sockets-demo/: Cargo.toml
plugins/sockets-demo/src/: lib.rs
plugins/sockets-demo/wit/: world.wit
plugins/sqlite/: build.sh  mise.toml
plugins/sqlite/compat/: compat.c
plugins/synth/: Cargo.toml
plugins/synth/src/: lib.rs
plugins/synth/wit/: world.wit
plugins/term-demo/: Cargo.toml
plugins/term-demo/src/: lib.rs
plugins/term-demo/wit/: world.wit
plugins/triangle/: Cargo.toml
plugins/triangle/src/: bindings.rs  lib.rs
plugins/triangle/wit/: world.wit
plugins/tty-compat/: termios.c  termios.h
plugins/tty-compat/sys/: ioctl.h
plugins/tty-compat/wit/: tty.wit
plugins/udpecho/: build.sh  echo.c
plugins/vim/: Dockerfile  build.sh  mise.toml  vimrc
plugins/vim/compat/: grp.h  pwd.h  tcap_stub.c  termios.h  wkos.c
plugins/vim/compat/sys/: ioctl.h  wait.h
plugins/wsh/: Cargo.toml
plugins/wsh/src/: main.rs
scripts/: publish-known-set.sh
src/: audio.rs  client.rs  compositor.rs  example1.rs  host_shell.rs  imguirenderer.rs  imguisdlhelper.rs  main.rs  midi.rs  netstack.rs  oci.rs  plugin.rs  project.rs  protocol.rs  render2d.rs  server.rs  session.rs  sockets.rs  terminal.rs  text.rs  vfs.rs  workspace.rs
wit/: plugin.wit
wit-audio/: world.wit
