[package]
name = "wk"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "29.0.3"
env_logger = "0.11.11"
pollster = "0.4.0"
tokio = { version = "1", features = ["rt", "net", "time", "io-util"] }
winit = "0.30"
ab_glyph = "0.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
kdl = "6"
wasmtime = { version = "46", features = ["component-model", "async"] }
wasmtime-wasi = "46"
wasmtime-wasi-io = "46"
wasi-webgpu-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime" }
wasi-graphics-context-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime" }
wgpu-core = "29"
wgpu-types = "29"
web-audio-api = "1.6.0"
alacritty_terminal = "0.26.0"
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
