[workspace]
# The root `wk` binary is a member automatically; `crates/` holds the shared
# pieces. `plugins/` are independent cargo-component crates built on their own.
members = ["crates/*"]
exclude = ["plugins"]
resolver = "2"

[package]
name = "wk"
version = "0.1.0"
edition = "2021"

# The wk binary is the front-end (window + rendering + input). The backend and
# the client<->server contract are separate crates it depends on.
[dependencies]
wk-protocol = { path = "crates/wk-protocol" }
wk-server = { path = "crates/wk-server" }
wgpu = "29.0.3"
env_logger = "0.11.11"
pollster = "0.4.0"
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "signal", "macros"] }
winit = "0.30"
ab_glyph = "0.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
