[workspace]
# The root `wk` binary is a member automatically; `crates/` holds the shared
# pieces. `plugins/` are independent cargo-component crates built on their own.
members = ["crates/*"]
exclude = ["plugins"]
resolver = "2"

[package]
name = "wk"
version = "0.1.0"
edition = "2021"

# The wk binary is just the CLI: it parses args, runs the workspace
# subcommands, builds the server, and hands it to a client. The contract, the
# backend, and the local UI client each live in their own crate.
[dependencies]
wk-protocol = { path = "crates/wk-protocol" }
wk-server = { path = "crates/wk-server" }
wk-token-service = { path = "crates/wk-token-service" }
client-local-ui = { path = "crates/client-local-ui" }
env_logger = "0.11.11"
clap = { version = "4.6.1", features = ["derive"] }
