[package]
name = "beep"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wk:beep"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wk:webaudio" = { path = "wit/deps/wk-webaudio" }
